# mlirSynth

./: .gitignore  CMakeLists.txt  README.md
.vim/: coc-settings.json
SynthIR/: CMakeLists.txt  Utils.cc  Utils.h
SynthIR/enumeration/: CandidateTuples.cc  Enumerator.cc  Enumerator.h  Stats.cc
SynthIR/execution/: ArgUtils.cc  ArgUtils.h  Lowering.h
SynthIR/transforms/: DeadArgRemovalPass.h
benchmark/: plot.r  run.py
benchmark/polybench/: atax.mlir  bicg.mlir  covariance.mlir  gemver.mlir  gesummv.mlir  syr2k.mlir  syrk.mlir
benchmarks/: 2mm.mlir  3mm.mlir  correlation.mlir  doitgen.mlir  gemm.mlir  gemver.mlir  mvt.mlir  syrk.mlir
build_tools/: build_dependencies.sh  build_irSynth.sh  build_isl.sh  build_mlirSynth.sh  build_mlir_hlo.sh  gen_ArgTuples.py  gen_CandidateTuples.py  gen_CartesianProduct.py  mlir_hlo_version.txt
build_tools/llvm_patches/: add-trait-verification-function.patch  disable-TOSA-to-make-mlir-hlo-build.patch  support-more-emitc-ops.patch  upgrade-emit-c.patch
build_tools/patches/llvm/: enable-emit-c-for-more-ops.patch
irSynth/: CMakeLists.txt  ContextManager.cc  ContextManager.h  Utils.cc  Utils.h  main.cc
irSynth/analysis/: CMakeLists.txt  Exporter.cpp  Exporter.h  PolyhedralAnalysis.cc  PolyhedralAnalysis.h  PolyhedralInfo.cc  Scop.cc  Scop.cpp  Scop.h  affine-info.cc  affine-info.cpp  gemm.mlir  mean.mlir
irSynth/analysis/isl/: isl_helper.cpp  isl_helper.h  isl_tools.h
irSynth/enumeration/: ArgTuples.cc  ArgTuples.h  AttributeGen.cc  AttributeGen.h  Candidate.cc  Candidate.h  CandidateStore.cc  CandidateStore.h  CandidateTuples.cc  CandidateTuples.h  CartesianProduct.cc  CartesianProduct.h  Enumerator.cc  Enumerator.h  Generators.cc  Generators.h  Grammar.cc  Grammar.h  Guide.cc  Guide.h  OpInfos.cc  OpInfos.h  ProcessingStatus.cc  ProcessingStatus.h  Stats.cc  Stats.h  Utils.cc  Utils.h
irSynth/execution/: ArgUtils.cc  ArgUtils.h  ArrayUtils.cc  ArrayUtils.h  Executor.cc  Executor.h  Lowering.cc  Lowering.h
irSynth/synthesis/: CandidateStore.cc  Enumerator.cc  Enumerator.h  Generators.cc  Generators.h  Grammar.h  Guide.cc  Guide.h  ProcessingStatus.h  Stats.cc  Stats.h  Synthesizer.cc  Synthesizer.h  Threading.h
irSynth/tools/: GrammarExtractor.cc  Opt.cc  Synthesizer.cc  TablegenExtractor.cc  TestExecutor.cc
irSynth/transforms/: ChangeSizesPass.cc  ChangeSizesPass.h  CleanupPass.cc  CleanupPass.h  CopyModifiedMemrefsPass.cc  CopyModifiedMemrefsPass.h  DeadArgRemovalPass.cc  FoldToTensorToMemrefPairPass.h  LoopDistributionPass.cc  LoopDistributionPass.h  LoopOutlinePass.cc  LoopOutlinePass.h  MemrefCopyToLoopsPass.h  MemrefMinifyPass.cc  MemrefMinifyPass.h  PrepareTargetPass.cc  TargetOutlinePass.cc  Utils.cc  Utils.h
irSynth/validation/: CheckingValidator.cc  CheckingValidator.h  TestingValidator.cc  TestingValidator.h
mlirSynth/: CMakeLists.txt
mlirSynth/execution/: ArgUtils.h  Executor.h
mlirSynth/synthesis/: Candidate.h  CartesianProduct.cc  Generators.h  Grammar.cc  Guide.h  ProcessingStatus.cc  Utils.h
mlirSynth/tools/: GrammarExtractor.cc  TestExecutor.cc
mlirSynth/transforms/: AnnotateLastStoredMemrefArgPass.cc  AnnotateLastStoredMemrefArgPass.h  ChangeSizesPass.h  CleanupPass.h  CopyModifiedMemrefsPass.h  FoldToTensorToMemrefPairPass.cc  LoopOutlinePass.h  MemrefCopyToLoopsPass.cc  PrepareTargetPass.h  TargetOutlinePass.h  Utils.h
mlirSynth/validation/: CheckingValidator.cc
scripts/: make_table.py  plot.r  run_tests.py
test/: 2mm.mlir  3mm.mlir  CMakeLists.txt  atax.mlir  bicg.mlir  bicg_1.mlir  bicg_2.mlir  correlation.mlir  correlation_1.mlir  correlation_2.mlir  correlation_3.mlir  correlation_4.mlir  correlation_orig.mlir  doitgen.mlir  elementwise.mlir  gemm.mlir  gemm_distributed.mlir  gemver.mlir  gemver_1.mlir  gemver_2.mlir  gemver_3.mlir  gemver_4.mlir  gesummv.mlir  lit.cfg.py  lit.site.cfg.py.in  mm.mlir  mvt.mlir  mvt_1.mlir  mvt_2.mlir  simple.mlir  trmm.mlir
test/end2end/: matvec.mlir  matvec_plus_mat.mlir  matvec_plus_matvec.mlirx  matvec_plus_matvec_2.mlirx  mm.mlir  syrk.mlir  syrk_2.mlir  tri.mlir  tri_mm.mlir
test/end2end/polybench/: 2mm.mlir  3mm.mlir  atax.mlir  bicg.mlir  correlation_2_1.mlirx  correlation_3.mlirx  doitgen.mlir  gemm.mlir  gemver.mlirx  gesummv.mlir  mvt.mlir  symm.mlirx  syr2k.mlirx  syrk.mlirx  trmm.mlirx
test/equiv/: 3mm.mlir  atax.mlir  bicg_1.mlir  bicg_2.mlir  correlation.mlir  correlation_2.mlir  correlation_2_1.mlir  correlation_2_red.mlir  covariance.mlir  gemm.mlir  gesummv.mlir  run.sh  symm.mlir  trmm.mlir
test/snippets/: 3mm.mlir  bicg_1.mlir  correlation_2.mlir  covariance.mlir  gemver.mlir  memref_to_tensor.mlir
test/synthesis/: gemver_1.mlirx  matvec.mlir  matvec_plus_mat.mlir  mm.mlir  tri.mlir
test/synthesis/polybench/: 3mm.mlir  correlation_2.mlirx  doitgen.mlir  gemm.mlir  gesummv.mlir
test/transforms/: copy-modified-memrefs.mlir  distribute-loops.mlir  minify-memrefs.mlir  outline-loops.mlir  outline-target.mlir  prepare-target.mlir
test/unused/equiv/: 2mm.mlir  mvt_1.mlir
test/unused/snippets/: bicg_2.mlir  correlation.mlir  correlation_4.mlir  gemver_2.mlir  gesummv_distributed.mlir  mvt_2.mlir
test_equiv/: correlation.mlir  covariance.mlir  syrk.mlir
test_tmp/: 2mm.mlir  3mm.mlir  atax.mlir  bicg.mlir  bicg_1.mlir  bicg_2.mlir  correlation.mlir  correlation_1.mlir  covariance.mlir  doitgen.mlir  gemm.mlir  gemver.mlir  gesummv.mlir  mvt_2.mlir  symm.mlir  syr2k.mlir  syr2k_2.mlir  syrk.mlir
testfiles/: atax.mlir  bicg.mlir  mvt.mlir  simple.mlir
